--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Flex Box</title>
+    <title>Registration Form</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
@@ -14,32 +14,74 @@
   </head>
   <body>
     <main>
-      <div class="sedans">
-        <img src="images/icon-sedans.svg" alt="sedans" />
-        <h2>SEDANS</h2>
+      <div class="learn">
+        <h2>Learn to code by watching others</h2>
         <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal
-          for cruising in the city or on your next road trip.
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
         </p>
-        <button>Learn More</button>
       </div>
-      <div class="suvs">
-        <img src="images/icon-suvs.svg" alt="suvs" />
-        <h2>SUVS</h2>
-        <p>
-          Take an SUV for its spacious interior, power, and versatility. Perfect
-          for your next family vacation and off-road adventures.
-        </p>
-        <button>Learn More</button>
-      </div>
-      <div class="luxury">
-        <img src="images/icon-luxury.svg" alt="luxury" />
-        <h2>LUXURY</h2>
-        <p>
-          Cruise in the best car brands without the bloated prices. Enjoy the
-          enhanced comfort of a luxury rental and arrive in style.
-        </p>
-        <button>Learn More</button>
+      <div class="form">
+        <div class="try">
+          <p>Try it free 7 days <span>then $20/mo, thereafter</span></p>
+        </div>
+        <form action="">
+          <div class="input">
+            <input
+              name="first"
+              type="text"
+              required=""
+              placeholder="First Name"
+              autocomplete="none"
+            />
+            <div class="error" data-error="First Name cannot be empty"></div>
+          </div>
+          <div class="input">
+            <input
+              type="text"
+              name="last"
+              required=""
+              placeholder="Last  Name"
+              autocomplete="none"
+            />
+            <div class="error" data-error="Last Name cannot be empty"></div>
+          </div>
+          <div class="input">
+            <input
+              id="email"
+              type="email"
+              required=""
+              placeholder="Email Address"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"
+              autocomplete="none"
+            />
+            <div
+              class="error"
+              data-error="Looks like this is not an email"
+            ></div>
+          </div>
+          <div class="input">
+            <input
+              type="password"
+              name="password"
+              required=""
+              placeholder="Password"
+            />
+            <div class="error" data-error="Password cannot be empty"></div>
+          </div>
+          <div class="btn">
+            <div class="btn">
+              <button id="submit">CLAIM YOUR FREE TRIAL</button>
+            </div>
+          </div>
+          <div class="form-footer">
+            <p>
+              By clicking the button, you are agreeing to our
+              <span>Terms and Services</span>
+            </p>
+          </div>
+        </form>
       </div>
     </main>
   </body>
